--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
-    "tabWidth": 4,
-    "useTabs": false,
-    "singleQuote": true
+  "arrowParens": "avoid",
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 80,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
