--- a/package.json
+++ b/package.json
@@ -1,46 +1,65 @@
 {
-    "name": "hackutd-tech-guide",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "docusaurus": "docusaurus",
-        "start": "docusaurus start",
-        "build": "docusaurus build",
-        "swizzle": "docusaurus swizzle",
-        "deploy": "docusaurus deploy",
-        "clear": "docusaurus clear",
-        "serve": "docusaurus serve",
-        "write-translations": "docusaurus write-translations",
-        "write-heading-ids": "docusaurus write-heading-ids",
-        "typecheck": "tsc"
-    },
-    "dependencies": {
-        "@docusaurus/core": "^2.2.0",
-        "@docusaurus/preset-classic": "^2.2.0",
-        "@mdx-js/react": "^1.6.22",
-        "clsx": "^1.2.1",
-        "prism-react-renderer": "^1.3.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
-    "devDependencies": {
-        "@docusaurus/module-type-aliases": "^2.2.0",
-        "@tsconfig/docusaurus": "^1.0.5",
-        "typescript": "^4.7.4"
-    },
-    "browserslist": {
-        "production": [
-            ">0.5%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "engines": {
-        "node": ">=16.14"
+  "name": "intergalactic-earth",
+  "version": "2.3.0",
+  "scripts": {
+    "dev": "astro check --watch & astro dev",
+    "dev:generate": "npm run fetch:readmes && npm run dev",
+    "start": "astro dev",
+    "build": "astro build && jampack ./dist",
+    "preview": "astro preview",
+    "sync": "astro sync",
+    "astro": "astro",
+    "format:check": "prettier --plugin-search-dir=. --check .",
+    "format": "prettier --plugin-search-dir=. --write .",
+    "lint": "eslint .",
+    "generate": "ts-node --esm --skipProject scripts/generateReadmes.ts"
+  },
+  "dependencies": {
+    "@astrojs/rss": "^2.4.1",
+    "@resvg/resvg-js": "^2.4.1",
+    "@varandas/fetch-readme": "^1.0.10",
+    "astro": "^2.4.5",
+    "fuse.js": "^6.6.2",
+    "github-slugger": "^2.0.0",
+    "remark-collapse": "^0.1.2",
+    "remark-toc": "^8.0.1",
+    "satori": "^0.8.1",
+    "tailwindcss": "^3.3.2",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^2.1.3",
+    "@astrojs/sitemap": "^1.3.1",
+    "@astrojs/tailwind": "^3.1.2",
+    "@divriots/jampack": "^0.11.2",
+    "@octokit/rest": "^19.0.11",
+    "@octokit/types": "^9.2.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/github-slugger": "^1.3.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/react": "^18.2.6",
+    "@typescript-eslint/parser": "^5.59.5",
+    "astro-eslint-parser": "^0.14.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.40.0",
+    "eslint-plugin-astro": "^0.27.0",
+    "js-yaml": "^4.1.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "!(*.{png,jpg,jpeg,webp})": [
+      "prettier --plugin-search-dir=. --write"
+    ]
+  }
 }
